--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -163,7 +163,6 @@ login:
     register: S'inscrire
     singin: connexion
 
-
 user:
   success: Profil édité avec succès
 
@@ -223,7 +222,6 @@ base:
     panier: Mon Panier
     login_register: Connexion / Inscription
 
-
 message:
   produit:
     nom: Le nom du produit ne peux pas être vide.
@@ -231,6 +229,6 @@ message:
     prix: Le prix doit être supérieur ou égal a zéro.
     stock: Le stock doit être supérieur ou égal a zéro.
   user:
-    email: Veillez entrer un E-Mail.
+    email: Veuillez entrer un E-Mail.
     nom: Le nom ne peux pas être vide.
     prenom: Le prénom ne peux pas être vide.
